# turner-lab-to-nwb

./: .gitignore  README.md  make_env.yml  pyproject.toml  setup.py
.github/workflows/: test-install.yml
notebooks/: antidromic_detection_tutorial.ipynb  notebook_helpers.py  turner_m1_glm.ipynb  turner_m1_peth.ipynb  turner_m1_usage.ipynb
src/turner_lab_to_nwb/asap_embargo/: __init__.py  asap_embargo_convert_session.py  asap_embargo_intan_recordinginterface.py  asap_embargo_metadata.yaml  asap_embargo_notes.md  asap_embargo_requirements.txt  asap_embargobehaviorinterface.py  asap_embargonwbconverter.py
src/turner_lab_to_nwb/asap_m1_mptp/: collect_dandiset_info_to_csv.py  conversion_notes.md  conversion_script.py  convert_session.py  dandiset_session_metadata.csv  hed_utils.py  metadata.yaml  metadata_leu.yaml
src/turner_lab_to_nwb/asap_m1_mptp/assets/: file_structure.md  how_to_read_matlab_data.py  trials_hed_sidecar.json
src/turner_lab_to_nwb/asap_m1_mptp/assets/data_exploration/: analyze_timing_structure.py  anatomical_coordinates.md  file_structure.md  how_to_read_matlab_data.py  nwb_converison.md  nwb_conversion.md  stimulation_events.md  timing_analysis_summary.md  trial_boundary_options.md  trial_structure.md
src/turner_lab_to_nwb/asap_m1_mptp/assets/matlab_utilities/: __init__.py  extract_matlab_strings.py  matlab_string_extraction.md
src/turner_lab_to_nwb/asap_m1_mptp/assets/metadata_table/: leu_table.csv  ven_table.csv  ven_table_old.csv  warped_coordinates.csv
src/turner_lab_to_nwb/asap_m1_mptp/assets/papers_summary_and_notes/: active_movement_summary.md  experimental_setup_commonalities.md  muscle_stretch_summary.md  pyramidal_tract_neurons_summary.md
src/turner_lab_to_nwb/asap_m1_mptp/documentation/: anatomical_coordinates.md  anatomical_localization_pipeline.md  antidromic_stimulation.md  cross_template_coordinate_conversion.md  electrodes_in_experiment.md  emg_recordings.md  experiment_hypothesis_variables.md  how_we_deal_with_trialized_data.md  lfp.md  nearest_neighbor_region_labeling.md  nwb_conversion.md  nwbfile_structure.md  sensory_receptive_field_testing.md  stimulation_events.md  trial_structure.md
src/turner_lab_to_nwb/asap_m1_mptp/interfaces/: README.md  __init__.py  analog_kinematics_interface.py  antidromic_stimulation_interface.py  electrodes_interface.py  emg_interface.py  lfp_interface.py  manipulandum_interface.py  spike_times_interface.py  trials_interface.py
src/turner_lab_to_nwb/asap_tdt/: __init__.py  asap_tdt_convert_all_sessions.py  asap_tdt_convert_session.py  asap_tdt_convert_sessions.py  asap_tdt_metadata.yaml  asap_tdt_notes.md  asap_tdt_requirements.txt  asap_tdt_subjects_metadata.yaml  asap_tdtnwbconverter.py
src/turner_lab_to_nwb/asap_tdt/asap_tdt_gaia/: __init__.py  asap_tdt_gaia_convert_all_sessions.py  asap_tdt_gaia_convert_session.py  asap_tdt_gaia_sortinginterface.py  asap_tdt_gaianwbconverter.py
src/turner_lab_to_nwb/asap_tdt/asap_tdt_isis/: __init__.py  asap_tdt_isis_convert_all_sessions.py  asap_tdt_isis_convert_session.py  asap_tdt_isisnwbconverter.py
src/turner_lab_to_nwb/asap_tdt/extractors/: __init__.py  asap_tdt_filtered_recordingextractor.py  asap_tdt_sortingextractor.py
src/turner_lab_to_nwb/asap_tdt/interfaces/: __init__.py  asap_tdt_eventsinterface.py  asap_tdt_filtered_recordinginterface.py  asap_tdt_plexon_sortinginterface.py  asap_tdt_recordinginterface.py  asap_tdt_sortinginterface.py
src/turner_lab_to_nwb/asap_tdt/metadata/: ecephys_metadata.yaml  embargo_metadata.yaml  post_MPTP_GPi_only_metadata.yaml  post_MPTP_embargo_metadata.yaml  post_MPTP_metadata.yaml  post_MPTP_public_metadata.yaml  pre_MPTP_GPi_only_metadata.yaml  pre_MPTP_embargo_metadata.yaml  pre_MPTP_metadata.yaml  pre_MPTP_public_metadata.yaml  public_metadata.yaml  subjects_metadata.yaml
src/turner_lab_to_nwb/asap_tdt/tutorials/: asap_tdt_demo.ipynb
src/turner_lab_to_nwb/asap_tdt/utils/: __init__.py  load_data_list.py  units.py
(+2 files in other folders)
