[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "turner-lab-to-nwb"
version = "0.0.1"
description = "NWB conversion scripts, functions, and classes for Turner conversion"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "CatalystNeuro", email = "ben.dichter@catalystneuro.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    "neuroconv",
    "nwbwidgets",
    "nwbinspector",
    "pymatreader>=1.1.0",
    "numpy<2.3",
    "ndx-hed",
    "ndx-events",
    "remfile>=0.1.13",
    "hdmf",
]

[project.urls]
Homepage = "https://github.com/catalystneuro/turner-lab-to-nwb"
Repository = "https://github.com/catalystneuro/turner-lab-to-nwb"

[tool.hatch.build.targets.wheel]
packages = ["src/turner_lab_to_nwb"]

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.toml
  |\.yml
  |\.md
  |\.txt
  |\.sh
  |\.git
  |\.ini
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.codespell]
skip = '*.git*,*.pdf,*.css, *.ipynb,*/assets/*,*.txt'
check-hidden = true
ignore-words-list = 'assertin,sems,sinlge,singl,som'

[tool.ruff]

[tool.ruff.lint]
select = [
    "F401",  # Unused import
    "I",  # All isort rules
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
relative-imports-order = "closest-to-furthest"
known-first-party = ["turner_lab_to_nwb"]

[tool.isort]
profile = "black"
reverse_relative = true
known_first_party = ["turner_lab_to_nwb"]

[tool.uv.sources]
neuroconv = { path = "../../work_repos/neuroconv", editable = true }
hdmf = {path = "../../work_repos/hdmf", editable = true}

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "nwbinspector>=0.6.5",
    "pynapple>=0.9.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
]

